--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
