--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
     "socket.io-client": "^4.5.4",
