--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "firebase": "^9.16.0",
+    "mapbox-gl": "^2.13.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -16,7 +19,6 @@
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
     "react-simple-star-rating": "^5.1.7",
-    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
     "socket.io-client": "^4.5.4",
